--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'com.google.gms.google-services'
+// Add the Fabric plugin.
+//apply plugin: 'io.fabric'
+
 //kotlin kapt and navigation safesrgs plugin
 
 /*apply plugin: 'kotlin-kapt'
@@ -108,7 +112,12 @@ dependencies {
 
     //implementation 'com.esri.arcgis.android:arcgis-android:10.2.9'
     implementation 'com.google.firebase:firebase-messaging:11.0.2'
-    implementation 'com.google.firebase:firebase-crash:11.0.2'
+    // (Recommended) Add the Google Analytics dependency.
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+
+    // Add the Firebase Crashlytics dependency.
+//    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
 }
 repositories {
     mavenCentral()
