--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,14 @@ buildscript {
     dependencies {
 
 
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
+
+
+        // Google Services plugin (check for v3.1.2 or higher).
+        classpath 'com.google.gms:google-services:4.3.3'
+
+        //  Fabric Crashlytics plugin.
+//        classpath 'io.fabric.tools:gradle:1.31.2'
 
        // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -30,6 +37,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url 'https://maven.fabric.io/public' }
         
     }
 }
