--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ dependencies {
     //implementation 'com.google.firebase:firebase-messaging:11.0.2'
     // (Recommended) Add the Google Analytics dependency.
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation project(path: ':libraryuaepass')
 
     // Add the Firebase Crashlytics dependency.
 //    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
