--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc03"
     implementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
 
 //    implementation group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: '2.2.0-rc03'
 
