--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycleVersion"
 
-    implementation 'com.google.android.gms:play-services-analytics:11.0.2'
-
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'ru.egslava:MaskedEditText:1.0.5'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
