--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-        //vectorDrawables.useSupportLibrary = true
+        vectorDrawables.useSupportLibrary = true
         //ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86' ,'x86_64'
         multiDexEnabled true
         /*ndk.abiFilters 'armeabi-v7a', 'arm64-v8a','x86', 'x86_64'*/
@@ -71,7 +71,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
     implementation "androidx.cardview:cardview:$rootProject.cardViewVersion"
 //    implementation "com.google.android.material:material:1.0.0-alpha1"
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
 
@@ -110,7 +110,7 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
 
-    implementation 'com.etebarian:meow-bottom-navigation:1.2.0'
+    //implementation 'com.etebarian:meow-bottom-navigation:1.2.0'
 
     //implementation 'com.esri.arcgis.android:arcgis-android:10.2.9'
     //implementation 'com.google.firebase:firebase-messaging:11.0.2'
