--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,15 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         vectorDrawables.useSupportLibrary = true
+
+        buildConfigField "String", "URI_SCHEME", "\"//kharetati\""
+        buildConfigField "String", "URI_HOST_SUCCESS", "\"success\""
+        buildConfigField "String", "URI_HOST_FAILURE", "\"failure\""
+        manifestPlaceholders = [
+                host_success: "success",
+                host_failure: "failure",
+                scheme : "//kharetati "
+        ]
         //ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86' ,'x86_64'
         multiDexEnabled true
         /*ndk.abiFilters 'armeabi-v7a', 'arm64-v8a','x86', 'x86_64'*/
@@ -94,7 +103,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc03"
     implementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
 
 //    implementation group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: '2.2.0-rc03'
 
