1. Bug fixes as on 07/07/2020 1:00pm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:configChanges="locale"
             android:screenOrientation="portrait"
             android:launchMode="singleTask"
+            android:autoRemoveFromRecents="true"
             android:windowSoftInputMode="adjustPan|stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
