--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,8 @@ dependencies {
     implementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
 
+    implementation "com.google.firebase:firebase-core:17.2.3"
+
 //    implementation group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: '2.2.0-rc03'
 
     //Retrofit and Gson
@@ -127,7 +129,7 @@ dependencies {
     //implementation 'com.esri.arcgis.android:arcgis-android:10.2.9'
     //implementation 'com.google.firebase:firebase-messaging:11.0.2'
     // (Recommended) Add the Google Analytics dependency.
-    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation project(path: ':libraryuaepass')
 
     // Add the Firebase Crashlytics dependency.
