--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
         //UAE PASS END -- Adding Custom Scheme Variables
         //ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86' ,'x86_64'
         multiDexEnabled true
+        ndk.abiFilters 'armeabi-v7a', 'arm64-v8a'
         /*ndk.abiFilters 'armeabi-v7a', 'arm64-v8a','x86', 'x86_64'*/
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -132,10 +133,11 @@ dependencies {
     //implementation 'com.esri.arcgis.android:arcgis-android:10.2.9'
     //implementation 'com.google.firebase:firebase-messaging:11.0.2'
     // (Recommended) Add the Google Analytics dependency.
-    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.firebase:firebase-analytics:17.6.0'
 
     // Add the Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+
 
     implementation project(path: ':libraryuaepass')
 
